# petry-action-test

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml  release.yml
docs/: index.html
lib/: vuecomotive-scroll-0.2.1.tgz
