[tool.poetry]
name = "petry-action-test"
version = "0.1.0"
description = ""
authors = ["somespecialone <tkachenkodmitriy@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
